--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -5,11 +5,14 @@ branch-defaults:
 global:
   application_name: Wordlist
   branch: null
+  default_ec2_keyname: aws-eb
   default_platform: Go 1.13.2
   default_region: us-west-2
+  include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
   profile: eb-cli
   repository: null
+  sc: git
   workspace_type: Application
