--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,17 +1,20 @@
 branch-defaults:
   master:
-    environment: Wordlist-dev
+    environment: Wordlist-env-dev
+environment-defaults:
+  Wordlist-env-dev:
+    branch: null
+    repository: null
 global:
   application_name: Wordlist
-  branch: null
-  default_ec2_keyname: aws-eb
-  default_platform: Go 1.13.2
-  default_region: us-west-2
+  default_ec2_keyname: null
+  default_platform: arn:aws:elasticbeanstalk:eu-central-1::platform/Go 1 running on
+    64bit Amazon Linux/2.14.1
+  default_region: eu-central-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
   profile: eb-cli
-  repository: null
   sc: git
   workspace_type: Application
